# clinic-appointment-booking-engine

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt
backend/: .env.example  main.py  todo.md
backend/artifacts/: lang_id_ecapa_ta.onnx
backend/core/: language_id.py  vad.py
backend/scripts/: eval_lang_id.py
backend/tests/: test_eval_dataset_cache.py  test_eval_lang_id.py  test_language_id.py  test_vad.py
backend/training/: __init__.py  augment.py  build_dataset.py  eval_lang_id.py  export_onnx.py  train_ecapa.py  train_lang_id.ipynb
backend/utils/: __init__.py  config.py  eval_dataset_cache.py  logger.py
docs/: custom-lang-id-design.md  design.md  features.json  training-config.md  vad-design.md
tmp/speechbrain_models/: hyperparams.yaml
