[project]
name = "clinic-appointment-booking-engine"
version = "0.1.0"
description = "Automating doctor appointment reservations via Telephony, LLLMs, TTS and STT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "librosa>=0.10.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.12",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
    "numpy>=1.26.0",
    "scipy>=1.14.0",
    "onnxruntime>=1.19.0",
    "torch>=2.4.0",
    "torchaudio>=2.4.0",
    "datasets>=3.0.0",
    "groq>=0.12.0",
    "openai>=1.50.0",
    "langsmith>=0.1.100",
    "twilio>=9.3.0",
    "httpx>=0.28.0",
    "websockets>=13.0",
    "torchcodec>=0.13.0",
    "ipykernel>=7.3.0",
    "onnxscript>=0.7.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
